--- a/src/css/_variabled.css
+++ b/src/css/_variabled.css
@@ -22,6 +22,8 @@
     --box-hover-color: #e0e0e0;
 
     --gradient-overlay: rgba(16, 16, 16, 1);
+
+    --overlay-color: rgba(0, 0, 0, 0.75);
 }
 
 @media (prefers-color-scheme: dark) {
