--- a/src/css/views/HomeView.css
+++ b/src/css/views/HomeView.css
@@ -21,8 +21,7 @@
     background-size: cover;
 }
 
-.content-app-box,
-.content-game-box {
+.content-app-box {
     margin-top: 4.8rem;
     padding: 0 2.8rem;
 }
@@ -53,101 +52,50 @@
     border-color: var(--hr-color);
 }
 
-.content-popular-list {
-    height: calc(8.4rem * 3 + 8px * 2);
-}
-
-.popular-item {
-    height: 8.4rem;
-    display: flex;
-    grid-gap: 1rem;
-    align-items: center;
-    cursor: pointer;
-    border-radius: 0.8rem;
-    padding: 0.8rem 1.2rem;
-}
-
-.popular-item:hover {
-    background-color: var(--box-hover-color);
-}
-
-.popular-item-img {
+.app-item-img {
     width: 25%;
-    max-width: 56px;
+    max-width: 4.8rem;
     border-radius: 0.8rem;
 }
 
-.popular-item-box {
+.app-item {
+    padding: 0.8rem;
+    border-radius: 0.8rem;
+    cursor: pointer;
+    transition: all 200ms ease-in-out;
+}
+
+.app-item:hover {
+    background-color: var(--sub-deepdark-color);
+}
+
+.app-thumbnail {
     width: 100%;
+    aspect-ratio: 16 / 9;
+    border-radius: 0.8rem;
 }
 
-.popular-item-title {
-    width: calc(100% - 2.4rem);
-    display: block;
-    font-size: 1.4rem;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
-.popular-item-category {
-    font-size: 1.2rem;
-}
-
-.popular-item-star {
-    font-size: 1.2rem;
-}
-
-.content-grid-box {
-    display: grid;
-    grid-gap: 2rem;
-}
-
-.content-app {
-    /* background: var(--sub-color); */
-    border: 2px solid var(--hr-color);
-    border-radius: 0.6rem;
-    aspect-ratio: 1 / 1.15;
-    padding: 5%;
+.app-box {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.app-top-box {
-    display: flex;
-    flex-direction: column;
-    grid-gap: 0.8rem;
-}
-
-.app-lang {
-    background-color: #4FC08D;
-    padding: 0.2rem 1.6rem;
-    font-size: 1rem;
-    border-radius: 0.4rem;
-    align-self: end;
-    color: white;
+    align-items: center;
+    grid-gap: 1.6rem;
+    margin-top: 0.8rem;
 }
 
 .app-icon {
-    align-self: center;
-    width: 40%;
-    aspect-ratio: 1 / 1;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url(https://whale-store.pstatic.net/20230205_207/1675579969384cOUxA_PNG/icon128.png);
+    width: 4.8rem;
+    border-radius: 0.8rem;
 }
 
-@media screen and (max-width:767px) {
-    .content-grid-box {
-        grid-template-columns: repeat(2, 1fr);
-    }
+.app-title {
+    font-size: 1.4rem;
+    overflow: hidden;
 }
 
-@media screen and (min-width:768px) and (max-width:1199px) {
-    .content-grid-box {
-        grid-template-columns: repeat(3, 1fr);
-    }
+.app-author,
+.app-download,
+.app-timestamp {
+    font-size: 1.2rem;
 }
 
 @media screen and (min-width: 1200px) {
@@ -155,9 +103,5 @@
         width: 960px;
         margin-left: auto;
         margin-right: auto;
-    }
-
-    .content-grid-box {
-        grid-template-columns: repeat(4, 1fr);
     }
 }
