--- a/src/css/views/AppModify.css
+++ b/src/css/views/AppModify.css
@@ -80,8 +80,8 @@ input[type=radio]:checked + .ionic {
 
 input {
     width: 100%;
-    height: 3.6rem;
-    padding: 0.8rem;
+    height: 4.8rem;
+    padding: 0.8rem 1.6rem;
     background: linear-gradient(var(--background-color), var(--background-color)),
         linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
     background-origin: border-box;
@@ -96,10 +96,14 @@ input[type=text]:focus {
     border-color: transparent;
 }
 
+.content-preview {
+    display: none;
+}
+
 textarea {
     resize: none;
     width: 100%;
-    height: 16rem;
+    height: 20rem;
     background: linear-gradient(var(--background-color), var(--background-color)),
         linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
     background-origin: border-box;
@@ -108,7 +112,7 @@ textarea {
     outline: none;
     border-radius: 0.8rem;
     color: var(--primary-color);
-    padding: 0.8rem;
+    padding: 0.8rem 1.6rem;
 }
 
 textarea:focus {
@@ -120,6 +124,24 @@ textarea:focus {
 }
 
 label {
+    border-radius: 100rem;
+    padding: 0.2rem 1.6rem;
+    border: 2px solid var(--sub-color);
+    cursor: pointer;
+}
+
+.margin {
+    margin-top: 1.6rem;
+}
+
+.content-p-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 1.6rem;
+    grid-gap: 0.8rem;
+}
+
+.content-p-item {
     border-radius: 100rem;
     padding: 0.2rem 1.6rem;
     border: 2px solid var(--sub-color);
@@ -139,6 +161,14 @@ label {
 
 .contact > input {
     margin-top: 0.8rem;
+}
+
+.content-submit-btn {
+    cursor: pointer;
+    text-align: center;
+    font-size: 2rem;
+    border-radius: 0.8rem;
+    padding: 0.8rem;
 }
 
 @media screen and (min-width: 1200px) {
